--- a/package.json
+++ b/package.json
@@ -3,26 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "chartist": "^0.10.1",
+    "alertifyjs": "^1.11.1",
+    "axios": "^0.18.0",
     "create-react-app": "^1.3.3",
-    "google-maps-react": "^1.1.0",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
-    "react-chartist": "^0.13.0",
     "react-dom": "^15.6.1",
-    "react-notification-system": "^0.2.15",
+    "react-loading-animation": "^1.4.0",
+    "react-loading-overlay": "^0.3.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
-    "alertifyjs": "^1.11.1",
-    "axios": "^0.18.0",
-    "match-sorter": "^2.3.0",
     "react-table": "^6.8.6",
-    "react-redux": "^5.0.6",
-    "react-loading-animation": "^1.4.0",
-    "currency-formatter": "^1.3.2",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-promise": "^0.5.3"
